# Rust-gdax-websocket-client

./: .gitignore  LICENSE  README.md  dump.rdb  gdax_portal_controller.pl  launch.pl
etc/: nginx.conf  nginx.template  redis.conf  redis.template
gdax_portal/: Cargo.toml  run_debug  run_release
gdax_portal/src/: main.rs
gdax_refine/: Cargo.toml
gdax_refine/src/: main.rs
gdax_websocket_client/: Cargo.toml
gdax_websocket_ingress_controller/: gdax_websocket_ingress_controller.sln
gdax_websocket_ingress_controller/gdax_websocket_ingress_controller/: Class.cs  Program.cs  gdax_websocket_ingress_controller.csproj  packages.config
gdax_websocket_ingress_controller/gdax_websocket_ingress_controller/Properties/: AssemblyInfo.cs
rust-redis-101/src/: main.rs
