[package]
name = "gdax_portal"
version = "0.1.0"
authors = ["Paul G Webster <paul.g.webster@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
websocket = "0.26.2"
redis = "0.20.0"
dirs = "3.0.1"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
